examples/test/testpolicy3588.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3588
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key2: value29
      key19: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value26
          key22: value33
          key5: value13
      podSelector:
        matchLabels:
          key39: value6
          key33: value42
